css/style.css
@import url(http://fonts.googleapis.com/css?family=Gravitas+One|Goblin+One);

/* ==|== primary styles =====================================================
   Author: Beau Simensen <beau@offloc.com>
   ========================================================================== */

/*#primary-site-navigation { display: none; } *//* remove when more pages are present */

.social-media .icon {
    line-height: 2em;
    display: block;
    text-indent: -5000px;
    width: 14px;
    height: 14px;

}
.social-media .icon.facebook {
    background-image: url(sm-icon-fb.png);
}

body {
    font-size: 1em;
    color: #111;
    font-family: arial, sans-serif;
    background-image: url(dark_brick_wall.png);
}

a:visited {
    color: #005;
}
a {
    color: #00e;
}

header.site .name-and-location,
.pretty-navigation,
#primary-site-navigation,
footer.site,
#content {
    min-width: 320px;
    max-width: 750px;
    margin: 0 auto;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    padding: 0 .25em;
}

header.site .name-and-location{
    padding-top: .25em;
    font-family: 'Goblin One', cursive, serif;
    vertical-align: middle;
    line-height: 1em;
    color: rgb(87,36,36);
}

header.site .name-and-location,
.pretty-navigation,
#primary-site-navigation,
footer.site,
#content {
    background-color: #ddd;
}

.rgba header.site .name-and-location,
.rgba .pretty-navigation,
.rgba #primary-site-navigation,
.rgba footer.site,
.rgba #content {
    background-color: rgba(255, 255, 255, .9);
    text-shadow: 1px 1px 2px rgba(25, 25, 25, .15);
}

#content {
    padding-top: 1em;
    padding-bottom: 1em;
}
footer.site {
    padding-bottom: .25em;
}
footer.site .legal {
    border-top: 1px solid rgba(100,0,0, .2);
    padding-top: .25em;
    font-size: .75em;
}

.pretty-navigation {
    background-color: #552221;
    border-top: 2px solid #822422;
    border-bottom: 1px solid #822422;
}

#primary-site-navigation {
    background-color: #59403f;
    border-bottom: 1px solid rgba(133,33,33, .9);
}


.rgba .pretty-navigation {
    background-color: rgba(133,33,33, .5);
    border-top: 2px solid rgba(133,33,33, .9);
    border-bottom: 1px solid rgba(133,33,33, .9);
}

.rgba #primary-site-navigation {
    background-color: rgba(233,133,133, .25);
    /*background-color: rgba(255, 255, 255, .95);*/
    border-bottom: 1px solid rgba(133,33,33, .9);
}

#primary-site-navigation .navigation {
    font-size: .65em;
}
#primary-site-navigation .navigation ul {
    display: table;
    margin: 0 auto;
    padding: .5em 0;
}
#primary-site-navigation .navigation li {
    display: inline-block;
}

#primary-site-navigation .navigation li a {
    text-shadow: 1px 1px 2px rgba(25, 25, 25, .5);
    margin: 0 .25em;
    text-decoration: none;
    padding: .25em .5em;
  -webkit-border-radius: 1em; /* Saf3-4, iOS 1-3.2, Android <e;1.6 */
     -moz-border-radius: 1em; /* FF1-3.6 */
          border-radius: 1em; /* Opera 10.5, IE9, Saf5, Chrome, FF4, iOS 4, Android 2.1+ */

  /* useful if you don't want a bg color from leaking outside the border: */
  -moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box;
}

#primary-site-navigation .navigation li a {
    background-color: #aaa;
    color: #eee;
}
.rgba #primary-site-navigation .navigation li a {
    background-color: rgba(185,130,130, .25);
}

#primary-site-navigation .navigation li a.current {
    background-color: #555;
    color: #eee;
}
.rgba #primary-site-navigation .navigation li a.current {
    background-color: rgba(185,130,130, .75);
}

header.site .name a {
    color: inherit;
    text-decoration: none;
}
header.site .name {
    display: inline-block;
    font-weight: bold;
}
header.site .location {
}
header.site .address,
header.site .city-state {
    line-height: 1.25em;
    font-size: .5em;
    vertical-align: bottom;
    display: inline-block;
}
header.site .address:after {
    content: ', ';
}

.bricks-floor.first-floor {
    margin-top: 0;
}
.bricks-floor {
    margin: 1em 0;
}
.bricks-floor header.floor {
    font-size: .75em;
    color: rgba(75,50,50, .75);
    border-bottom: 1px solid #888;
    font-weight: bold;
}
.bricks-floor ul {
    list-style-type: none;
    padding: 0px;
    margin: 0px;
}

.business blockquote {
    font-size: .8em;
    margin: .5em 0;
}
.business .description p {
    margin: .5em 0;
}

.business ul.social-media,
.business ul.websites {
    font-size: .75em;
}

.business .address,
.business blockquote.description,
.business ul.websites {
    margin: 0em 1em;
}
.business ul.social-media,
.business ul.social-media li {
    margin: 0;
    display: inline-block;
}

.bricks-floor ul li.business {
    margin: .5em 0;
}

.business header.business {
    font-size: 1.25em;
    font-weight: bold;
    display: inline-block;
}
.business .address {
    font-size: .75em;
    white-space: nowrap;
    font-weight: bold;
    color: rgba(75,50,50, .5);
}

.business .social-media {
    display: inline-block;
}

header.site ul.photos {
    margin: 0 auto;
    padding: 0;
    list-style: none;
    width: 99%;
}
header.site ul.photos li.building-photo {
    display: inline-block;
    width: 19%;
    margin: 0;
    padding: 0;
}
header.site ul.photos li.building-photo a {
    display: block;
    margin: 0 auto;
    text-indent: -5000px;
-webkit-box-shadow: 2px 2px 4px rgba(0,0,0, .25); /* Saf3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
   -moz-box-shadow: 2px 2px 4px rgba(0,0,0, .25); /* FF3.5 - 3.6 */
        box-shadow: 2px 2px 4px rgba(0,0,0, .25); /* Opera 10.5, IE9, FF4+, Chrome 6+, iOS 5 */
}
header.site ul.photos li.building-photo a {
    width: 50px;
    height: 50px;
    margin-top: .25em;
    margin-bottom: .25em;
}
header.site ul.photos li.building-photo.photo-000 a {
    background-image: url(../images/building-000-small.png);
}
header.site ul.photos li.building-photo.photo-001 a {
    background-image: url(../images/building-001-small.png);
}
header.site ul.photos li.building-photo.photo-002 a {
    background-image: url(../images/building-002-small.png);
}
header.site ul.photos li.building-photo.photo-003 a {
    background-image: url(../images/building-003-small.png);
}
header.site ul.photos li.building-photo.photo-004 a {
    background-image: url(../images/building-004-small.png);
}

#content .building-photos {
    display: table;
    margin: 0 auto;
    padding: 0;
    list-style-type: none;
}
#content .building-photos li {
}
#content .building-photos li img {
    margin: .15em 0;
    max-width: 100%;
    width: auto !important;
    height: auto !important;
}

/* ==|== media queries ======================================================
   PLACEHOLDER Media Queries for Responsive Design.
   These override the primary ('mobile first') styles
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 480px) {
  /* Style adjustments for viewports 480px and over go here */
}

@media only screen and (min-width: 768px) {
  /* Style adjustments for viewports 768px and over go here */

    #content .building-photos li img {
        /*margin: 1em 0;*/
    }
    header.site .name-and-location,
    .pretty-navigation,
    #primary-site-navigation,
    footer.site,
    #content {
        padding-left: 1em;
        padding-right: 1em;
    }

    #content {
        padding-top: 2em;
        padding-bottom: 2em;
    }
    footer.site {
        padding-bottom: 1em;
        margin-bottom: 2em;
    }
    header.site {
        padding-top: 1em;
    }

    .business header.business {
        /*font-size: 2em;*/
    }
    .pretty-navigation {
    }
    header.site {
        margin-top: 1em;
    }
    header.site .name {
        margin-top: .15em;
        font-size: 3em;
        line-height: 1em;
        display: block;
        float: none;
    }
    header.site .location {
    }

    header.site .address,
    header.site .city-state {
        font-size: 1em;
    }
    footer.site .legal {
        padding-top: 1em;
    }
    .bricks-floor {
        margin: 1.5em 0;
    }

    .bricks-floor ul li.business {
        margin-top: 1em;
        margin-bottom: 1em;
    }

    .business .address {
        display: inline-block;
    }

    #primary-site-navigation,
    #content {
        font-size: 1.5em;
    }
    #primary-site-navigation .navigation ul {
        /*margin-left: 0;*/
    }

    header.site .name-and-location {

      -webkit-border-top-left-radius: .5em; /* Saf3-4, iOS 1-3.2, Android <e;1.6 */
      -webkit-border-top-right-radius: .5em; /* Saf3-4, iOS 1-3.2, Android <e;1.6 */
         -moz-border-radius-topleft: .5em; /* FF1-3.6 */
         -moz-border-radius-topright: .5em; /* FF1-3.6 */
              border-top-radius: .5em; /* Opera 10.5, IE9, Saf5, Chrome, FF4, iOS 4, Android 2.1+ */

      /* useful if you don't want a bg color from leaking outside the border: */
      -moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box;

    }

    footer.site {

      -webkit-border-bottom-left-radius: .5em; /* Saf3-4, iOS 1-3.2, Android <e;1.6 */
      -webkit-border-bottom-right-radius: .5em; /* Saf3-4, iOS 1-3.2, Android <e;1.6 */
         -moz-border-radius-bottomleft: .5em; /* FF1-3.6 */
         -moz-border-radius-bottomright: .5em; /* FF1-3.6 */
              border-bottom-radius: .5em; /* Opera 10.5, IE9, Saf5, Chrome, FF4, iOS 4, Android 2.1+ */

      /* useful if you don't want a bg color from leaking outside the border: */
      -moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box;

    }
    header.site ul.photos li.building-photo a {
        width: 100px;
        height: 100px;
        margin-top: .5em;
        margin-bottom: .5em;
    }
    header.site ul.photos li.building-photo.photo-000 a {
        background-image: url(../images/building-000.png);
    }
    header.site ul.photos li.building-photo.photo-001 a {
        background-image: url(../images/building-001.png);
    }
    header.site ul.photos li.building-photo.photo-002 a {
        background-image: url(../images/building-002.png);
    }
    header.site ul.photos li.building-photo.photo-003 a {
        background-image: url(../images/building-003.png);
    }
    header.site ul.photos li.building-photo.photo-004 a {
        background-image: url(../images/building-004.png);
    }
}

@media only screen and (-webkit-min-device-pixel-ratio: 2) {
    header.site ul.photos li.building-photo a {
        background-size: 50px 50px;
    }
    header.site ul.photos li.building-photo.photo-000 a {
        background-image: url(../images/building-000.png);
    }
    header.site ul.photos li.building-photo.photo-001 a {
        background-image: url(../images/building-001.png);
    }
    header.site ul.photos li.building-photo.photo-002 a {
        background-image: url(../images/building-002.png);
    }
    header.site ul.photos li.building-photo.photo-003 a {
        background-image: url(../images/building-003.png);
    }
    header.site ul.photos li.building-photo.photo-004 a {
        background-image: url(../images/building-004.png);
    }
}

